# gpu-dist

./: CMakeLists.txt  ProjectHome.md
GPUDistInBatchTestSimple/: CMakeLists.txt  GPUDistInBatchTestSimple_main.cpp
GPUDistLib/: CMakeLists.txt  GPUDistLib.h  GPUDistLibConfig.cmake.in  GPUDistLib_cpu.cpp  GPUDistLib_host.cu  GPUDistLib_internal.h  kernel_CompDist.h  kernel_CompDistFromTriangle.h  kernel_CompPairDist.h  kernel_CompPairDistInBatch.h  kernel_TransformTriangle.h
GPUDistTestSimple/: CMakeLists.txt  GPUDistTestSimple_main.cpp
GPUDistToTrianglesSimple/: CMakeLists.txt  GPUDistToTrianglesSimple_main.cpp
GPUHausdorffDistTestSimple/: CMakeLists.txt  GPUHausdorffDistNoCudppTest_main.cpp  GPUHausdorffDistTestSimple_main.cpp
trunk/: CMakeLists.txt
trunk/GPUDistInBatchTestSimple/: CMakeLists.txt
trunk/GPUDistLib/: CMakeLists.txt  GPUDistInBatch_host.cu  GPUDistLib.h  GPUDistLib_cpu.cpp  GPUDistLib_host.cu  GPUDistLib_internal.h  GPUHausdorffDist_host.cu  device_Vector.h  kernel_CompDist.h  kernel_CompDistFromTriangle.h  kernel_CompPairDist.h  kernel_SetupSegBegin.h
trunk/GPUDistTestSimple/: CMakeLists.txt
trunk/GPUDistToTrianglesSimple/: CMakeLists.txt  GPUDistToTrianglesSimple_main.cpp
trunk/GPUHausdorffDistTestSimple/: CMakeLists.txt  GPUHausdorffDistNoCudppTest_main.cpp
